@@ -1,6 +1,6 @@
 {
   "name": "simp-xinetd",
-  "version": "4.3.0",
+  "version": "4.3.1",
   "author": "SIMP Team",
   "summary": "Manages xinetd",
   "license": "Apache-2.0",
