@@ -1,3 +1,6 @@
+* Fri May 20 2022 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.3.1
+- Ensure that the module does not manage files if the package is being removed
+
 * Thu Jun 17 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 4.3.0
 - Removed support for Puppet 5
 - Ensured support for Puppet 7 in requirements and stdlib
